--- a/docker/all_in_one_container/Dockerfile
+++ b/docker/all_in_one_container/Dockerfile
@@ -7,6 +7,8 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+RUN echo "%sudo ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
+
 WORKDIR /app
 
 RUN python3 -m pip install virtualenv
